<resources>
    <string name="app_name">SESATHA</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


    <!-- toolbar title -->
    <string name="payment">Payment</string>
    <string name="checkout">Order Confirmation</string>
    <string name="spin">Select category</string>

    <!-- checkout activity -->
    <string name="change">Change</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Shipping</string>
    <string name="total">Total</string>


    <!-- Item description activity -->
    <string name="description">Description</string>
    <string name="addcart">Add to Cart</string>


    <!-- Activity headings -->
    <string name="myItemsStr">My Listings</string>
    <string name="createItemsStr">List a Product</string>
    <string name="updateItemsStr">Update Listing</string>
    <string name="category">Categories</string>
    <string name="pendingItemsStr">Review Items</string>
    <!-- payment -->
    <string name="transid">Transaction ID </string>
    <string name="transdate">Date </string>
    <string name="amount">Amount</string>
    <string name="transhistory">Transaction History</string>

    <string name="editBtnText">Edit</string>
    <string name="deleteBtnText">Remove</string>

    <!-- add payment -->
    <string name="inmonth"><font size="10"> Invalid Month</font></string>
    <string name="inyear"><font size="10"> Invalid Year</font></string>
    <string name="inccv"><font size="10"> Invalid CCV</font></string>
    <string name="cardname">Card Holders Name</string>
    <string name="cardno">Card No</string>
    <string name="carddet">Card Details</string>
    <string name="cardmon">MM</string>
    <string name="cardyr">YY</string>
    <string name="cardccv">CCV</string>
    <string name="submit">Submit</string>


    <!-- Buttons -->
    <string name="item_postBtn">Submit</string>
    <string name="item_updateBtn">Update</string>

    <!-- Register Activity -->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Contact Number</string>
    <string name="address1">Address Line 1</string>
    <string name="address2">Address Line 2</string>
    <string name="address3">Address Line 3</string>
    <string name="pass1">Password</string>
    <string name="pass2">Confirm Password</string>

    <!-- Register type Activity -->
    <string name="iam">I am a</string>
    <string name="buyer">Buyer</string>
    <string name="seller">Seller</string>

    <string name="delconf">Are You Sure You Want To Remove Card Details?</string>
    <string name="yes">Confirm</string>
    <string name="no">Cancel</string>

    <string name="dismissItemBtn">Dismiss</string>
    <string name="approveItemBtn">Approve</string>


    <!--Profile Activity -->
    <string name="profile">Update Address</string>

    <string name="checkoutdia">Your Order is Placed Successfully</string>
    <string name="title_activity_sql">sql</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>