<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/delete_confirmation"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textStyle="bold"
        android:textSize="28dp"
        android:textAlignment="center"
        android:text="@string/delconf"
         />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/delno"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bgdark"
            android:textSize="15dp"
            android:layout_marginRight="20dp"
            android:text="@string/no"/>
        <Button
            android:id="@+id/delyes"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bgpink"
            android:textSize="15dp"
            android:layout_marginBottom="30dp"
            android:text="@string/yes"/>


    </LinearLayout>
</LinearLayout>