<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg30"
    android:id="@+id/drawerLayout"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <RelativeLayout
            android:layout_marginTop="40dp"
            android:paddingTop="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="40dp"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedcorderall"
            android:elevation="20dp"
            android:layout_gravity="center_horizontal">


            <TextView
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textStyle="bold"
                android:textSize="40dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_profname"
                android:layout_width="270dp"
                android:paddingTop="130dp"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/username"
                app:hintTextColor="@color/bgdark"
                app:hintTextAppearance="?attr/textAppearanceCaption"
                app:boxStrokeColor="@color/bgdark">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_profadd1"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:layout_below="@+id/et_profname"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/address1"
                app:hintTextColor="@color/bgdark"
                app:hintTextAppearance="?attr/textAppearanceCaption"
                app:boxStrokeColor="@color/bgdark">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_profadd2"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:layout_below="@+id/et_profadd1"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/address2"
                app:hintTextColor="@color/bgdark"
                app:hintTextAppearance="?attr/textAppearanceCaption"
                app:boxStrokeColor="@color/bgdark">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_profadd3"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:layout_below="@+id/et_profadd2"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/address3"
                app:hintTextColor="@color/bgdark"
                app:hintTextAppearance="?attr/textAppearanceCaption"
                app:boxStrokeColor="@color/bgdark">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_profphone"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:layout_below="@+id/et_profadd3"
                app:boxBackgroundColor="@color/white"
                android:hint="@string/phone"
                app:hintTextColor="@color/bgdark"
                app:hintTextAppearance="?attr/textAppearanceCaption"
                app:boxStrokeColor="@color/bgdark">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_centerInParent="true"
                android:id="@+id/prof_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_below="@+id/et_profphone"
                android:text="@string/submit"
                android:backgroundTint="@color/mainclr"/>

        </RelativeLayout>


    </LinearLayout>



</androidx.drawerlayout.widget.DrawerLayout>