<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="9dp"
    app:cardElevation="6dp"
    app:cardMaxElevation="6dp"
    android:layout_marginHorizontal="10dp"
    app:cardPreventCornerOverlap="true"

    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/trans_transidtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/transid" />

        <TextView
            android:id="@+id/trans_transid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trans_transidtv"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:fontFamily="sans-serif-medium"
            android:text="transaction id" />


        <TextView
            android:id="@+id/trans_amounttv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:text="@string/amount"
            android:layout_below="@+id/trans_transid"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:id="@+id/trans_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_alignParentEnd="true"
            android:text="amount"
            android:layout_below="@+id/trans_amounttv"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:id="@+id/trans_datetv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/transdate"
            android:layout_below="@+id/trans_transid"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"/>

        <TextView
            android:id="@+id/trans_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="15dp"
            android:text="date"
            android:layout_below="@+id/trans_datetv"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"/>




    </RelativeLayout>
</androidx.cardview.widget.CardView>